# therapist

./: .gitignore  .gitmodules  CLAUDE.md  CSM_MIGRATION_COMPLETE.md  ERRORS_FIXED.md  FIXES_APPLIED.md  Llama-3.2-1B  README.md  README_VOICE_CHAT.md  install_csm.sh  pyproject.toml  requirements.txt  run.sh
backend/: conversation_manager.py  csm_model.py  eeg_processor.py  main.py  pyproject.toml  requirements.txt  run.sh  therapeutic_csm.py
csm/: generator.py  run_csm.py
data_processing_py/: cortex.py  csv_replay.py  emotion_analyzer.py  kill_port.py  live_emotion.py  main.py  replay_demo.py  test_websocket_client.py  therapy_demo.py  visualizer.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: TenVoiceChat.tsx  VoiceBlob.tsx  VoiceChat.tsx
ten_agent/: .env.example  Dockerfile  README.md  docker-compose.yml  manifest-lock.json  manifest.json  property.json  start-servers.sh
ten_agent/examples/default/: property.json
ten_agent/examples/therapist/: manifest.json  property.json
ten_agent/ten_packages/addon_loader/python_addon_loader/: manifest.json
ten_agent/ten_packages/extension/agora_rtc/: manifest.json  property.json
ten_agent/ten_packages/extension/azure_tts/: manifest.json  property.json
ten_agent/ten_packages/extension/emotion_bridge_python/: __init__.py  addon.py  extension.py  manifest.json  property.json
ten_agent/ten_packages/system/agora_rtc_sdk/: manifest.json
ten_agent/ten_packages/system/agora_rtc_sdk/include/rtc/low_level_api/include/: config_engine_i.h
ten_agent/ten_packages/system/azure_speech_sdk/: BUILD.gn  manifest.json
ten_agent/ten_packages/system/azure_speech_sdk/include/microsoft/c_api/: speechapi_c_property_bag.h
ten_agent/ten_packages/system/azure_speech_sdk/include/microsoft/cxx_api/: speechapi_cxx_enums.h  speechapi_cxx_speech_synthesis_request.h
ten_agent/ten_packages/system/nlohmann_json/: manifest.json
ten_agent/ten_packages/system/ten_ai_base/: manifest.json
ten_agent/ten_packages/system/ten_ai_base/api/: asr-interface.json
ten_agent/ten_packages/system/ten_ai_base/interface/ten_ai_base/: __init__.py  asr.py  config.py  const.py  helper.py  llm_tool.py  message.py  transcription.py  tts.py  types.py
ten_agent/ten_packages/system/ten_runtime/: manifest.json
ten_agent/ten_packages/system/ten_runtime_go/: manifest.json
ten_agent/ten_packages/system/ten_runtime_python/: manifest.json
