#
#
# Agora Real Time Engagement
# Created by Wei Hu in 2022-12.
# Copyright (c) 2023 Agora IO. All rights reserved.
#
#
config("azure_speech_sdk_common_libs") {
  libs = [
    "Microsoft.CognitiveServices.Speech.core",
    "Microsoft.CognitiveServices.Speech.extension.audio.sys",
    "Microsoft.CognitiveServices.Speech.extension.codec",
    "Microsoft.CognitiveServices.Speech.extension.kws.ort",
    "Microsoft.CognitiveServices.Speech.extension.kws",
    "Microsoft.CognitiveServices.Speech.extension.lu",
    "Microsoft.CognitiveServices.Speech.extension.mas",
    "pal_azure_c_shared",
    "pal_azure_c_shared_openssl3",
  ]
}

config("azure_speech_sdk_common_config") {
  configs = [ ":azure_speech_sdk_common_libs" ]

  include_dirs = [ "//ten_packages/system/azure_speech_sdk/include" ]
  lib_dirs = [ "//ten_packages/system/azure_speech_sdk/lib" ]
}

config("config_for_app") {
  configs = [ ":azure_speech_sdk_common_config" ]

  if (is_linux) {
    ldflags =
        [ "-Wl,-rpath=\$ORIGIN/../ten_packages/system/azure_speech_sdk/lib" ]
  } else if (is_mac) {
    ldflags = [
      "-Wl,-rpath,@loader_path/../ten_packages/system/azure_speech_sdk/lib",
    ]
  }
}

config("config_for_ten_packages") {
  configs = [ ":azure_speech_sdk_common_config" ]

  if (is_linux) {
    ldflags = [ "-Wl,-rpath=\$ORIGIN/../../../system/azure_speech_sdk/lib" ]
  } else if (is_mac) {
    ldflags = [ "-Wl,-rpath,@loader_path/../../../system/azure_speech_sdk/lib" ]
  }
}

config("config_for_standalone_ten_packages") {
  configs = [ ":azure_speech_sdk_common_libs" ]

  include_dirs = [ "//.ten/app/ten_packages/system/azure_speech_sdk/include" ]
  lib_dirs = [ "//.ten/app/ten_packages/system/azure_speech_sdk/lib" ]
}
